{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "1804ec62-5ee5-4179-9934-3ad04e03e4dc",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "07949f86-f179-4c04-9bae-837922e95af7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "VerticalMovement",
                    "type": "Button",
                    "id": "311987cf-2c8f-4b0e-ac37-573f78a6d74c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5061b25-fae9-4914-af9e-cb5a9ccb250f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63f8917e-22ec-4faf-b609-ebb19260c4e5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}